src/resolver/snapshots/rusty__resolver__initial_type_annotator__tests__numeric_literals_are_annotated.snap
---
source: src/resolver/initial_type_annotator.rs
expression: "AnnotationPrinter ::\nprint(r#\"PROGRAM PRG\n                // bool literals\n                TRUE;\n                FALSE;\n                // int\n                0;\n                128;\n                32768;\n                2147483647;\n                2147483648;\n                // float literals\n                0.0;\n                3.1415;\n            END_PROGRAM\"#,\n& annotations, & unit)"
---
TRUE [<BOOL>]
FALSE [<BOOL>]
0 [<DINT>]
128 [<DINT>]
32768 [<DINT>]
2147483647 [<DINT>]
2147483648 [<LINT>]
0.0 [<REAL>]
3.1415 [<REAL>]
